# automaton-auditor

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rubric.json  rubric_peer_grading.json
.cursor/rules/: agent.mdc
audit/: report.md  report_2.md
audit/report_bypeer_received/: audit_report_new_rubric.md
audit/report_onpeer_generated/: audit_report.md  audit_report_old_rubric.md  report_peer.md
audit/report_onself_generated/: audit_report.md  audit_report_1.md  audit_report_2.md  audit_report_3.md  report_1.md  report_2.md  report_with_no_pdf.md
docs/: implementation_plan.md
reports/: final_report.md
scripts/: generate_report_pdf.py
specs/: _meta.md  api_contracts.md  functional_requirement.md  system_architecture.md  system_requirement_spec.md
src/: __init__.py  graph.py  run.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
tests/: __init__.py  test_phase0.py  test_phase1_doc_tools.py  test_phase1_repo_tools.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
tests/fixtures/: minimal_graph.py
