[project]
name = "automaton-auditor"
version = "0.1.0"
description = "Automated quality-assurance swarm that audits GitHub repositories and PDF reports (Digital Courtroom architecture)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "typing_extensions>=4.0",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
